test_regress/t/t_select_bad_range4.out
%Error: t/t_select_bad_range4.v:20:7: Width of bit range is huge; vector of over 1 billion bits: 0x20000001
                                    : ... note: In instance 't'
   20 |   reg [1<<29 : 0] hugerange;
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_select_bad_range4.v:23:14: Width of :+ or :- is < 0: 32'hffffffff
                                     : ... note: In instance 't'
   23 |     sel2 = mi[44+:-1];
      |              ^
%Error: t/t_select_bad_range4.v:23:14: Width of bit extract must be positive (IEEE 1800-2023 11.5.1)
                                     : ... note: In instance 't'
   23 |     sel2 = mi[44+:-1];
      |              ^
%Warning-WIDTHEXPAND: t/t_select_bad_range4.v:23:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 1 bits.
                                                   : ... note: In instance 't'
   23 |     sel2 = mi[44+:-1];
      |          ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Error: t/t_select_bad_range4.v:24:14: Width of :+ or :- is huge; vector of over 1 billion bits: 32'h20000000
                                     : ... note: In instance 't'
   24 |     sel2 = mi[44+:1<<29];
      |              ^
%Warning-SELRANGE: t/t_select_bad_range4.v:24:14: Extracting 536870912 bits from only 6 bit number
                                                : ... note: In instance 't'
   24 |     sel2 = mi[44+:1<<29];
      |              ^
                   ... For warning description see https://verilator.org/warn/SELRANGE?v=latest
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Warning-SELRANGE: t/t_select_bad_range4.v:24:14: Selection index out of range: 536870915:4 outside 45:40
                                                : ... note: In instance 't'
   24 |     sel2 = mi[44+:1<<29];
      |              ^
%Warning-WIDTHTRUNC: t/t_select_bad_range4.v:24:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 536870912 bits.
                                                  : ... note: In instance 't'
   24 |     sel2 = mi[44+:1<<29];
      |          ^
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Error: t/t_select_bad_range4.v:25:19: Expecting expression to be constant, but variable isn't const: 'nonconst'
                                     : ... note: In instance 't'
   25 |     sel2 = mi[44+:nonconst];
      |                   ^~~~~~~~
%Error: t/t_select_bad_range4.v:25:19: Width of :+ or :- bit slice range isn't a constant
                                     : ... note: In instance 't'
   25 |     sel2 = mi[44+:nonconst];
      |                   ^~~~~~~~
%Warning-WIDTHEXPAND: t/t_select_bad_range4.v:25:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 1 bits.
                                                   : ... note: In instance 't'
   25 |     sel2 = mi[44+:nonconst];
      |          ^
%Warning-WIDTHEXPAND: t/t_select_bad_range4.v:26:15: Operator SUB expects 32 or 6 bits on the LHS, but LHS's VARREF 'nonconst' generates 1 bits.
                                                   : ... note: In instance 't'
   26 |     sel2 = mi[nonconst];
      |               ^~~~~~~~
%Warning-WIDTHEXPAND: t/t_select_bad_range4.v:26:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 1 bits.
                                                   : ... note: In instance 't'
   26 |     sel2 = mi[nonconst];
      |          ^
%Error: t/t_select_bad_range4.v:27:15: First value of [a:b] isn't a constant, maybe you want +: or -:
                                     : ... note: In instance 't'
   27 |     sel2 = mi[nonconst : nonconst];
      |               ^~~~~~~~
%Error: t/t_select_bad_range4.v:27:26: Second value of [a:b] isn't a constant, maybe you want +: or -:
                                     : ... note: In instance 't'
   27 |     sel2 = mi[nonconst : nonconst];
      |                          ^~~~~~~~
%Warning-WIDTHEXPAND: t/t_select_bad_range4.v:27:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 1 bits.
                                                   : ... note: In instance 't'
   27 |     sel2 = mi[nonconst : nonconst];
      |          ^
%Warning-SELRANGE: t/t_select_bad_range4.v:28:14: Extracting 536870913 bits from only 6 bit number
                                                : ... note: In instance 't'
   28 |     sel2 = mi[1<<29 : 0];
      |              ^
%Warning-SELRANGE: t/t_select_bad_range4.v:28:14: Selection index out of range: 536870872:-40 outside 45:40
                                                : ... note: In instance 't'
   28 |     sel2 = mi[1<<29 : 0];
      |              ^
%Warning-SELRANGE: t/t_select_bad_range4.v:28:14: Extracting 536870913 bits from only 536870873 bit number
                                                : ... note: In instance 't'
   28 |     sel2 = mi[1<<29 : 0];
      |              ^
%Warning-WIDTHTRUNC: t/t_select_bad_range4.v:28:10: Operator ASSIGN expects 4 bits on the Assign RHS, but Assign RHS's SEL generates 536870913 bits.
                                                  : ... note: In instance 't'
   28 |     sel2 = mi[1<<29 : 0];
      |          ^
%Error: Exiting due to
